--- a/ResponsiveWebDesignProjects_FCC/SurveyForm/index.html
+++ b/ResponsiveWebDesignProjects_FCC/SurveyForm/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
 
-<body>
-  <div class="survey">
+<body>  <div class="survey">
     <header>
       <h1 id="title">freeCodeCamp Survey Form</h1>
       <p id="description" class="description">Thank you for taking time to improve our platform</p>
@@ -17,22 +16,22 @@
     <div class="form-center">
       <form id="survey-form">
         <div id="form-group">
-          <label for="name" id="name-label">Name<input id="name" type="text" class="form-control"
+          <label for="name" id="name-label">Name<input id="name" type="text"
               placeholder="Enter your name" required>
           </label>
         </div>
         <div id="form-group">
           <label for="email" id="email-label">Email
-            <input id="email" type="email" placeholder="Enter your Email" class="form-control" required>
+            <input id="email" type="email" placeholder="Enter your Email" required>
           </label>
         </div>
         <div id="form-group">
-          <label for="number" id="number-label" class="form-control">Age (optional) <input id="number" type="number"
+          <label for="number" id="number-label">Age (optional) <input id="number" type="number"
               placeholder="Age" min="10" max="100" required>
           </label>
         </div>
         <div id="form-group">
-          <p class="form-control">Which option best describes your current role?</p>
+          <p>Which option best describes your current role?</p>
           <select id="dropdown" name="role">
             <option value="">Select current role</option>
             <option value="1">Student</option>
@@ -44,7 +43,7 @@
           </p>
         </div>
         <div id="form-group">
-          <p class="form-control">Would you recommend freeCodeCamp to a friend?</p>
+          <p>Would you recommend freeCodeCamp to a friend?</p>
           <label for="definitely"><input type="radio" id="definitely" name="recommend" value="definitely"
               class="input-radio" />Definitely recommend
           </label>
@@ -65,7 +64,7 @@
           </select>
         </div>
         <div id="form-group">
-          <p class="form-control">What would you like to see improved? (Check all that apply)</p>
+          <p>What would you like to see improved? (Check all that apply)</p>
           <label for="front-end"><input type="checkbox" id="front-end" name="improve" value="front-end-projects"
               class="input-checkbox" />Front-end Projects
           </label>
